--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,1 +1,9 @@
-<p>header works!</p>
+<header fxLayoutAlign="space-between center">
+    <div>StockWallet</div>
+    <div fxLayout="row" fxLayoutGap="20px">
+        <a routerLink="/">Home</a>
+        <a routerLink="/stockviewer">Stockviewer</a>
+        <a routerLink="/account">Account</a>
+        <a routerLink="/login">Login</a>
+    </div>
+</header>
