--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header fxLayoutAlign="space-between center">
+<app-header fxLayoutAlign="space-between center">
     <div>StockWallet</div>
     <div fxLayout="row" fxLayoutGap="20px">
         <a routerLink="/">Home</a>
@@ -6,4 +6,4 @@
         <a routerLink="/account">Account</a>
         <a routerLink="/login">Login</a>
     </div>
-</header>
+</app-header>
